// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadDoc > should ignore katex descendents (F_NONREC) 1`] = `
<div
  id="root"
>
  <div
    id="div1"
  >
    <p
      id="p1"
    >
      here is some text
    </p>
    <div
      class="katex"
      id="katex"
    >
      <div
        id="katex-1"
      >
        katex-1
      </div>
    </div>
    <div
      id="div1-1"
    >
      div1-1
    </div>
  </div>
</div>
`;

exports[`serialize > should remove tabindex from F_ELEM 1`] = `
<div
  id="root"
>
  <ul
    id="ul"
  >
    <li
      id="li1"
    >
      item 1
    </li>
    <li
      id="li2"
    >
      item 2
    </li>
  </ul>
</div>
`;

exports[`serialize > should remove tabindex from F_ELEM 2`] = `"<div id="root"><ul id="ul"><li id="li1">item 1</li><li id="li2">item 2</li></ul></div>"`;

exports[`untab > should untab a document 1`] = `
<div
  id="root"
>
  <div
    id="div1"
  >
    <p
      id="p1"
    >
      here is some text
    </p>
    <input
      id="input"
      name="input"
      size="10"
      type="text"
    />
    <script
      id="script"
    />
  </div>
</div>
`;
